--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^19.2.3",
+    "react-content-loader": "^7.1.2",
     "react-dom": "^19.2.3",
     "react-router-dom": "^7.12.0",
     "react-scripts": "5.0.1",
